fix how to cards description spacing

--- a/app/assets/stylesheets/components/_how-cards.scss
+++ b/app/assets/stylesheets/components/_how-cards.scss
@@ -15,6 +15,7 @@
   border-radius: 16px;
   background-color: white;
   box-shadow: $shadow;
+  height:100%;
 
   .panel-icon img{
     width: 25%;
